# SpecForge

./: .gitignore  LICENSE  README.md  pyproject.toml
adapters/java/junit5/: FormalTraceRegressionTest.java.tmpl
examples/arithmetic/: formal.yaml
examples/arithmetic/formal/: quota_model.py
examples/workflow/: formal.yaml
examples/workflow/formal/: RetryLease.cfg
schema/: formal.schema.json
scripts/: formal-check-ci.sh  formal-check-full.sh
skill/formal-check/: SKILL.md
skill/formal-check/agents/: openai.yaml
skill/formal-check/references/: counterexamples.md  modeling-patterns.md
skill/formal-check/scripts/: formal_check_cli.sh
src/formal_check/: __init__.py  __main__.py  cli.py  contract.py  junit.py  runner.py  scaffold.py  toolchains.py  traces.py
src/formal_check/schema/: toolchains.json
src/formal_check/templates/arithmetic/: formal.yaml
src/formal_check/templates/arithmetic/formal/: quota_model.py
src/formal_check/templates/workflow/: formal.yaml
src/formal_check/templates/workflow/formal/: RetryLease.cfg  RetryLease.tla
tests/: test_contract.py  test_runner_and_cli.py  test_toolchains.py  test_traces.py
tests/fixtures/contracts/invalid/: formal.yaml
tests/fixtures/contracts/valid/: formal.yaml
tests/fixtures/traces/: apalache.itf.json  tlc.json  z3.json
